--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,14 @@
 Click==7.0
 Flask==1.0.2
+Flask-Cors==3.0.7
+gunicorn==19.9.0
 itsdangerous==1.1.0
 Jinja2==2.10
 MarkupSafe==1.1.1
 Pillow==5.4.1
+pkg-resources==0.0.0
 pytesseract==0.2.6
-Werkzeug==0.14.1
 python-slugify==2.0.1
-gunicorn==19.9.0
+six==1.12.0
+Unidecode==1.0.23
+Werkzeug==0.14.1
